# $Id$

2006-04-16	Konstantin V. Arkhipov

	* core/Form/UrlEncodeFilter.class.php,
	core/Form/UrlDecodeFilter.class.php: more wrappers.

2006-04-14	Konstantin V. Arkhipov

	* meta/builders/ProtoClassBuilder.class.php: tricky relations handling
	implemented in proto classes, fixme closed.

2006-04-12	Konstantin V. Arkhipov

	* meta/builders/ContainerClassBuilder.class.php: removed unneeded
	method for OneToMany-based containers.

	* core/Form/PrimitiveDate.class.php: complexity detection fixed.

	* core/Form/FormUtils.class.php: forced usage of single import for
	complex primitives.

2006-04-11	Anton E. Lebedevich

	* main/Containers/UnifiedContainer.class.php: one more evil typo
	fixed, propagated from 0.2.

2006-04-11	Konstantin V. Arkhipov

	* core/DB/DBFactory.class.php: introduced ability to specify
	conntector's type for custom connections.
	
	* core/Base/Creatable.class.php: deprecated.
	
	* meta/: removed support for Creatable interface.

2006-04-09	Konstantin V. Arkhipov

	* 0.4.1 released.

2006-04-06	Konstantin V. Arkhipov

	* core/Base/Instantiatable.class.php: new grouping interface
	introduced.

	* core/DB/: dialects are now singletones.

	* core/OSQL/QueryIdentification.class.php: Stringable dependency moved
	to Query interface in the sake of debug pleasure.

2006-04-05	Konstantin V. Arkhipov

	* meta/: integer's Range support implemented.

	* core/OSQL/InsertOrUpdateQuery.class.php: added Range support in
	lazySet.

2006-04-05	Anton E. Lebedevich

	* main/Containers/UnifiedContainer.class.php: 1489 propagated to
	trunk.
	* main/Utils/DebugUtils.class.php: added.
	* core/OSQL/InsertOrUpdateQuery.class.php: added Timestamp support in
	lazySet.

2006-04-03	Konstantin V. Arkhipov

	* 0.4.0 released.

2006-04-02	Konstantin V. Arkhipov

	* meta/: correct boolean-type handling implemented and minor typos
	fixed.

	* core/Base/Enumeration.class.php: getObjectList() introduced as
	alternative to static getList().

2006-04-01	Konstantin V. Arkhipov
