@@ -3,7 +3,8 @@
 2006-04-16	Konstantin V. Arkhipov
 
 	* core/Form/UrlEncodeFilter.class.php,
-	core/Form/UrlDecodeFilter.class.php: more wrappers.
+	core/Form/UrlDecodeFilter.class.php,
+	core/Form/StringReplaceFilter.class.php: more wrappers.
 
 2006-04-14	Konstantin V. Arkhipov
 
